# stigame

./: .directory  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Tasks.md  retrieve_extern.py  workspace.workspace
Benchmark/: ButtonBenchmark.cpp  ButtonBenchmark.h  CMakeLists.txt  DecoratedButtonBenchmark.cpp  DecoratedButtonBenchmark.h  LabelBenchmark.cpp  LabelBenchmark.h  main.cpp
FormTest/: CMakeLists.txt  FormState.cpp  FormState.h  main.cpp
FrameTest/: CMakeLists.txt  CustomItem.cpp  CustomItem.h  Frame.cpp  Frame.h  main.cpp
GuiTest/: CMakeLists.txt  DumbGuiItem.cpp  DumbGuiItem.h  GuiTest.cbp  TestGui.cpp  TestGui.h  TestTabItem.cpp  TestTabItem.h  main.cpp
NetMessage/: CMakeLists.txt  Client.cpp  Client.h  CloseDispatcher.cpp  CloseDispatcher.h  HTTPTest.cpp  HTTPTest.h  MessageDispatch.cpp  MessageDispatch.h  NetMessageTask.cpp  NetMessageTask.h  Server.cpp  Server.h  main.cpp
Sample/: CMakeLists.txt  Sample.cbp  Sample.files  SampleState.cpp  SampleState.h  main.cpp
StiGame/: ActionBinding.cpp  ActionBinding.h  Angle.cpp  BaseGameState.cpp  BaseGameState.h  BaseMissile.cpp  BaseMissile.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckEventArgs.cpp  CheckEventListener.cpp  CheckEventListener.h  CheckEventThrower.cpp  Clipboard.cpp  Color.cpp  Color.h  ComboBox.cpp  ComboBox.h  CompActionMap.cpp  Computer.cpp  Computer.h  Controller.cpp  Controller.h  ControllerAxisEventArgs.cpp  ControllerAxisEventArgs.h  ControllerAxisEventListener.cpp  ControllerAxisEventThrower.cpp  ControllerButtonEventThrower.cpp  ControllerButtonEventThrower.h  ControllerDeviceEventListener.cpp  DecoratedButton.cpp  DecoratedButton.h  DefaultResolver.cpp  DefaultResolver.h  DirectionSprite.h  DirectionSpriteFileCreator.cpp  EventArgs.cpp  EventArgs.h  (+150 more)
StiGame/bindings/: ActionBind.cpp  ActionBind.h  ActionMap.cpp  ActionMap.h  BaseGameAction.cpp  BaseGameAction.h  CompActionMap.h  KeyActionMap.cpp  KeyActionMap.h.autosave  KeyBind.h  MouseActionMap.cpp  MouseActionMap.h  OverlayGameAction.cpp  OverlayGameAction.h  TimedGameAction.cpp  TimedGameAction.h
StiGame/core/: Angle.h  BaseGameState.h  Color.cpp  Color.h  ColorIndex.cpp  ColorIndex.h  Cursor.cpp  Cursor.h  Dimension.cpp  Dimension.h  DimensionF.cpp  DimensionF.h  Font.h  FontLibrary.cpp  FontLibrary.h  MDimension.cpp  MDimension.h  MDimensionF.cpp  MDimensionF.h  MPoint.cpp  MPoint.h  MPointF.cpp  MPointF.h  MVector2.cpp  MVector2.h  MVector2F.cpp  MVector2F.h  MathTK.cpp  MathTK.h  Matrix.cpp  Matrix.h  Motion.cpp  Motion.h  OutputProfiler.cpp  OutputProfiler.h  Point.cpp  Point.h  PointF.cpp  PointF.h  Rectangle.cpp  (+33 more)
StiGame/events/: CellValueChangedEventArgs.cpp  CellValueChangedEventArgs.h  CellValueChangedEventListener.cpp  CellValueChangedEventListener.h  CellValueChangedEventThrower.cpp  CellValueChangedEventThrower.h  CheckEventArgs.h  CheckEventListener.h  CheckEventThrower.h  ControllerAxisEventArgs.h  ControllerAxisEventListener.h  ControllerAxisEventThrower.h  ControllerButtonEventArgs.cpp  ControllerButtonEventArgs.h  ControllerButtonEventListener.cpp  ControllerButtonEventListener.h  ControllerButtonEventThrower.h  ControllerDeviceEventArgs.cpp  ControllerDeviceEventArgs.h  ControllerDeviceEventListener.h  ControllerDeviceEventThrower.cpp  ControllerDeviceEventThrower.h  EventListener.h  EventThrower.cpp  ItemValueChangedEventArgs.cpp  ItemValueChangedEventArgs.h  ItemValueChangedEventListener.cpp  ItemValueChangedEventListener.h  ItemValueChangedEventThrower.cpp  ItemValueChangedEventThrower.h  KeyEventArgs.cpp  KeyEventListener.cpp  KeyEventListener.h  KeyEventThrower.cpp  KeyEventThrower.h  MouseButtonEventArgs.h  MouseButtonEventListener.h  MouseButtonEventThrower.cpp  MouseButtonEventThrower.h  MouseMotionEventArgs.h  (+20 more)
StiGame/files/: Directory.cpp  Directory.h  Entry.cpp  Entry.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h
StiGame/gui/: BaseChildSupport.cpp  BaseChildSupport.h  Button.cpp  Button.h  CaptionSupport.cpp  CaptionSupport.h  CheckBox.cpp  CheckBox.h  ChildSupport.cpp  ChildSupport.h  Clipboard.h  ComboBox.cpp  ComboBox.h  DecoratedButton.cpp  DecoratedButton.h  FontSupport.cpp  FontSupport.h  FormLayout.cpp  FormLayout.h  FrameFile.cpp  FrameFile.h  GuiFrameState.cpp  GuiFrameState.h  GuiState.cpp  GuiState.h  HighlightItem.cpp  HighlightItem.h  HorizontalBoxLayout.cpp  HorizontalBoxLayout.h  Image.h  ImageButton.h  IntegerItemValue.cpp  IntegerItemValue.h  Item.cpp  Item.h  ItemAttribute.cpp  ItemAttribute.h  ItemContainer.cpp  ItemContainer.h  ItemCreatorChain.cpp  (+62 more)
StiGame/gui/effects/: EffectEventArgs.cpp  EffectEventArgs.h  EffectEventThrower.cpp  EffectEventThrower.h  EffectListener.cpp  EffectListener.h  EffectUnwrapper.cpp  EffectUnwrapper.h  ExpandItem.cpp  ExpandItem.h  FadeInItem.cpp  FadeInItem.h  FadeOutItem.cpp  FadeOutItem.h  ItemEffect.cpp  ItemEffect.h  MovingItem.cpp  MovingItem.h
StiGame/network/: DefaultMessageHandler.cpp  DefaultMessageHandler.h  IPacket.cpp  IPacket.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageHandler.cpp  MessageHandler.h  PacketBuffer.h  PacketStream.cpp  PacketStream.h  TcpPacket.cpp  TcpPacket.h  TcpSocket.cpp  TcpSocket.h  UdpPacket.cpp  UdpPacket.h  UdpSocket.cpp  UdpSocket.h
StiGame/primitives/: PCircle.cpp  PCircle.h  PEllipse.cpp  PEllipse.h  PLine.cpp  PLine.h  PRect.h  Primitive.h
StiGame/sprites/: ClonedDirectionSprite.cpp  ClonedDirectionSprite.h  ClonedSprite.cpp  ClonedSprite.h  DirectionSprite.cpp  DirectionSprite.h  DirectionSpriteFile.cpp  DirectionSpriteFile.h  DirectionSpriteFileCreator.cpp  DirectionSpriteFileCreator.h  DirectionSpriteLibrary.cpp  DirectionSpriteLibrary.h  IDirectionSprite.cpp  IDirectionSprite.h  ISprite.cpp  ISprite.h  Sprite.cpp  Sprite.h  SpriteFile.h  SpriteFileCreator.cpp  SpriteFileCreator.h  SpriteLibrary.cpp  SpriteLibrary.h
TableTest/: CMakeLists.txt  TableTestState.cpp  TableTestState.h  main.cpp
assets/: frame_test.gui
res-editor/: resource_file.py
sgrc/: CMakeLists.txt  CreateDirectionSpriteContext.cpp  CreateDirectionSpriteContext.h  SGString.cpp  (+9 more)
(+64 files in other folders)
