cmake_minimum_required(VERSION 2.8.4)
project(StiGame)

set(SOURCE_FILES
    ActionBind.cpp
    ActionBinding.cpp
    ActionMap.cpp
    Angle.cpp
    BaseGameAction.cpp
    BaseGameState.cpp
    BaseMissile.cpp
    Button.cpp
    CheckBox.cpp
    CheckEventArgs.cpp
    CheckEventListener.cpp
    CheckEventThrower.cpp
    Clipboard.cpp
    ClonedSprite.cpp
    Color.cpp
    ComboBox.cpp
    CompActionMap.cpp
    Computer.cpp
    Controller.cpp
    ControllerAxisEventArgs.cpp
    ControllerAxisEventListener.cpp
    ControllerAxisEventThrower.cpp
    ControllerButtonEventArgs.cpp
    ControllerButtonEventListener.cpp
    ControllerButtonEventThrower.cpp
    ControllerDeviceEventArgs.cpp
    ControllerDeviceEventListener.cpp
    ControllerDeviceEventThrower.cpp
    Cursor.cpp
    DecoratedButton.cpp
    Dimension.cpp
    DimensionF.cpp
    DirectionSprite.cpp
    DirectionSpriteFile.cpp
    DirectionSpriteFileCreator.cpp
    EventArgs.cpp
    EventListener.cpp
    EventThrower.cpp
    Font.cpp
    GamePath.cpp
    GameUnit.cpp
    GuiState.cpp
    HighlightItem.cpp
    HorizontalBoxLayout.cpp
    Image.cpp
    ImageButton.cpp
    ISprite.cpp
    Item.cpp
    KeyActionMap.cpp
    KeyBind.cpp
    KeyEventArgs.cpp
    KeyEventListener.cpp
    KeyEventThrower.cpp
    Label.cpp
    Layout.cpp
    List.cpp
    Logger.cpp
    MathTK.cpp
    MDimension.cpp
    MDimensionF.cpp
    MessageBox.cpp
    MissileDictionary.cpp
    Motion.cpp
    MouseActionMap.cpp
    MouseButtonEventArgs.cpp
    MouseButtonEventListener.cpp
    MouseButtonEventThrower.cpp
    MouseMotionEventArgs.cpp
    MouseMotionEventListener.cpp
    MouseMotionEventThrower.cpp
    MouseWheelEventArgs.cpp
    MouseWheelEventListener.cpp
    MouseWheelEventThrower.cpp
    MPoint.cpp
    MPointF.cpp
    MStyle.cpp
    MultiRect.cpp
    MVector2.cpp
    OverlayFrame.cpp
    OverlayGameAction.cpp
    OverlayMenu.cpp
    PacketBuffer.cpp
    PCircle.cpp
    PEllipse.cpp
    Pixel.cpp
    PLine.cpp
    Point.cpp
    PointF.cpp
    PRect.cpp
    Primitive.cpp
    ProgressBar.cpp
    RadioButton.cpp
    RadioGroup.cpp
    Rectangle.cpp
    ResourceFile.cpp
    Runtime.cpp
    SBMissile.cpp
    SelectionEventArgs.cpp
    SelectionEventListener.cpp
    SelectionEventThrower.cpp
    Spacer.cpp
    SPhysic.cpp
    Sprite.cpp
    SpriteFile.cpp
    SpriteFileCreator.cpp
    SpriteLibrary.cpp
    StringRenderer.cpp
    Style.cpp
    Surface.cpp
    TabItem.cpp
    Table.cpp
    TableCell.cpp
    TableRow.cpp
    TabPanel.cpp
    TcpSocket.cpp
    TextBox.cpp
    TextLogger.cpp
    Texture.cpp
    TimedGameAction.cpp
    TimeTools.cpp
    UdpSocket.cpp
    ValueObject.cpp
    VarFile.cpp
    Vector.cpp
    Vector2.cpp
    Version.cpp
    VerticalBoxLayout.cpp
    VideoConfig.cpp
    Viewport.cpp
    ViewportArea.cpp
    Window.cpp
    WindowEventArgs.cpp
    WindowEventListener.cpp
    WindowEventThrower.cpp
)

if(WIN32)
set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--export-all-symbols")
endif(WIN32)

configure_file(VersionConfig.h.in ${CMAKE_BINARY_DIR}/generated/VersionConfig.h)
include_directories(${CMAKE_BINARY_DIR}/generated/)

add_library(StiGame SHARED ${SOURCE_FILES})
target_link_libraries(StiGame ${SDL2} ${SDL2_image} ${SDL2_ttf} ${SDL2_net} ${SDL2_gfx})

install(TARGETS StiGame LIBRARY DESTINATION ${INSTALL_DIR} RUNTIME DESTINATION ${INSTALL_DIR} ARCHIVE DESTINATION ${INSTALL_DIR} COMPONENT library)
